fix header avec icons et modification du code html des composants

--- a/src/app/components/dark-mode-toggle/dark-mode-toggle.component.html
+++ b/src/app/components/dark-mode-toggle/dark-mode-toggle.component.html
@@ -1,3 +1,5 @@
-<button (click)="toggleDarkMode()" class="p-2 bg-blue-500 text-white rounded-md">
-  Toggle Dark Mode
+<button (click)="toggleDarkMode()" >
+  <fa-icon [icon]="isDarkMode ? faSun : faMoon"></fa-icon>
+
 </button>
+
