ajouter contact et modification du contenu html et ts des components

--- a/src/app/components/apropos/apropos.component.html
+++ b/src/app/components/apropos/apropos.component.html
@@ -1,4 +1,4 @@
-<section class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900">
+<section id="apropos" class="py-16 px-4 sm:px-6 lg:px-8 bg-white dark:bg-gray-900">
   <div class="max-w-7xl mx-auto">
     <!-- Header Section -->
     <div class="text-center mb-12">
