--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,8 +5,8 @@
 
       <!-- Left Section: Developer Name or Logo -->
       <div class="text-center sm:text-left mb-6 sm:mb-0">
-        <h3 class="text-xl font-bold text-white dark:text-gray-200">Your Name</h3>
-        <p class="text-sm text-gray-300 dark:text-gray-400">Web Developer | Programmer</p>
+        <h3 class="text-xl font-bold text-white dark:text-gray-200">Mohamed Ammar</h3>
+        <p class="text-sm text-gray-300 dark:text-gray-400">software Developer </p>
       </div>
 
       <!-- Middle Section: Social Links -->
@@ -14,10 +14,11 @@
         <a href="https://www.linkedin.com" target="_blank" class="hover:text-blue-500 mb-2 sm:mb-0 dark:hover:text-blue-400">
           <i class="fab fa-linkedin mr-2"></i>LinkedIn
         </a>
-        <a href="https://github.com" target="_blank" class="hover:text-gray-400 mb-2 sm:mb-0 dark:hover:text-gray-500">
+        <a href="https://github.com/simodev744" target="_blank" class="hover:text-gray-400 mb-2 sm:mb-0 dark:hover:text-gray-500">
           <i class="fab fa-github mr-2"></i>GitHub
         </a>
-        <a href="https://twitter.com" target="_blank" class="hover:text-blue-300 mb-2 sm:mb-0 dark:hover:text-blue-200">
+
+        <a href="https://.com" target="_blank" class="hover:text-blue-300 mb-2 sm:mb-0 dark:hover:text-blue-200">
           <i class="fab fa-twitter mr-2"></i>Twitter
         </a>
       </div>
