--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <!-- header.component.html -->
-<header class="bg-white dark:bg-gray-800 text-gray-800 dark:text-white p-4 flex justify-between items-center">
+<header  class="bg-white dark:bg-gray-800 text-gray-800 dark:text-white p-4 flex justify-between items-center">
   <div class="flex items-center space-x-4">
     <!-- Logo and Title -->
-    <img src="assets/logo.png" alt="Logo" class="h-10 w-10">
+    <img src="/assets/logo.png" alt="Logo" class="h-10 w-10">
     <h1 class="text-2xl font-bold">Portfolio</h1>
   </div>
 
@@ -10,7 +10,7 @@
   <nav class="hidden md:flex space-x-6">
     <ul class="flex space-x-6">
       <li><a href="#accueil" class="hover:text-blue-500 dark:hover:text-blue-300"><i class="fas fa-home"></i> Accueil</a></li>
-      <li><a href="#about" class="hover:text-blue-500 dark:hover:text-blue-300"><i class="fas fa-user"></i> About</a></li>
+      <li><a href="#contact" class="hover:text-blue-500 dark:hover:text-blue-300"><i class="fas fa-user"></i> contact</a></li>
       <li><a href="#apropos" class="hover:text-blue-500 dark:hover:text-blue-300"><i class="fas fa-info-circle"></i> Apropos</a></li>
       <li><a href="#projects" class="hover:text-blue-500 dark:hover:text-blue-300"><i class="fas fa-briefcase"></i> Projects</a></li>
 
