--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<section class="py-20 px-6 bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white">
+<section  id="projects"  class="py-20 px-6 bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white">
   <div class="text-center mb-10">
     <h2 class="text-3xl font-bold">My Projects</h2>
     <p class="text-lg mt-2">Here are some of the projects I've worked on.</p>
