--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,7 @@
-
-
 <app-header></app-header>
-
-
 <app-hero></app-hero>
-
 <app-projects></app-projects>
-
-  <app-apropos></app-apropos>
-  <app-contact></app-contact>
-
-
+<app-apropos></app-apropos>
+<app-contact></app-contact>
+<app-scroll-to-top></app-scroll-to-top>
 <app-footer></app-footer>
