--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -11,6 +11,7 @@
         Création d'applications robustes avec <span class="font-semibold">Java</span>,
         <span class="font-semibold">Spring Boot</span>, <span class="font-semibold">Angular</span>,
         <span class="font-semibold">Python</span>, et <span class="font-semibold">Node.js</span>
+        <span class="font-semibold">Python</span>, et <span class="font-semibold">expressjs</span>
       </p>
 
       <div class="flex flex-wrap justify-center lg:justify-start gap-4 mb-10">
