--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -25,7 +25,7 @@
 
       <!-- Right Section: Copyright -->
       <div class="text-center sm:text-right">
-        <p class="text-sm text-gray-400 dark:text-gray-500">© 2025 Your Name. All rights reserved.</p>
+        <p class="text-sm text-gray-400 dark:text-gray-500">© 2025 Mohamed Ammar. All rights reserved.</p>
       </div>
     </div>
   </div>
