--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 <header  class="bg-white dark:bg-gray-800 text-gray-800 dark:text-white p-4 flex justify-between items-center">
   <div class="flex items-center space-x-4">
     <!-- Logo and Title -->
-    <img src="/assets/logo.png" alt="Logo" class="h-10 w-10">
+    <img ngSrc="/assets/logo.png" alt="Logo" class="h-10 w-10" height="588" width="525">
     <h1 class="text-2xl font-bold">Portfolio</h1>
   </div>
 
